# hackerExcercises

./: .gitignore  CMakeLists.txt  README.md  c.bat
js/: petrol_station.js
src/: TaumAndBday.cpp  betweenArrays.cpp  bubbleSort.cpp  container-water.cpp  countingValleys.cpp  dayProgrammer.cpp  decorator.cpp  decrypt_message copy.cpp  decrypt_message.cpp  diagonal-difference.cpp  divisibleSumPairs.cpp  drawingBook.cpp  electronicShop.cpp  encrypt_message.cpp  magicSquare.cpp  main.cpp  migratoryBirds.cpp  numberOfIslands.cpp  permutation.cpp  quickSort.cpp  shortest_path.cpp  sockMerchant.cpp  subArrayDivision.cpp
src/test-data/: divisible-testcase02.txt  drawingBook-testcase01.txt  electronicShop-testcase02.txt  magicSquare-testcase01.txt  magicSquare-testcase02.txt  sockMerchant-testcase02.txt  subArrayDivision-testcase02.txt
